--- a/Aufgabe2/Aufgabe2.html
+++ b/Aufgabe2/Aufgabe2.html
@@ -3,10 +3,17 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Aufgabe 2 : Memory</title>
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 		<link type="text/css" rel="stylesheet" href="Aufgabe2.css">
+		<script type="text/javascript" src="Memory.js"></script>
 	</head>
 	<body>
-		<script type="text/javascript" src="Aufgabe2.js"></script>
-		
+		<section id="scoreboard">
+			<h2>Scoreboard</h2>
+		</section>
+		<section id="game">
+			<h2>Memory</h2>
+			<div id="mittig"></div>
+		</section>
 	</body>
 </html>
