--- a/Aufgabe2/Aufgabe2.html
+++ b/Aufgabe2/Aufgabe2.html
@@ -6,6 +6,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 		<link type="text/css" rel="stylesheet" href="Aufgabe2.css">
 		<script type="text/javascript" src="Memory.js"></script>
+		<meta name="viewport" content="width=device=width, initial-scale=1.0">
 	</head>
 	<body>
 		<section id="scoreboard">
