--- a/Aufgabe2/Aufgabe2.html
+++ b/Aufgabe2/Aufgabe2.html
@@ -14,7 +14,7 @@
 		</section>
 		<section id="game">
 			<h2>Memory</h2>
-			<div id="mittig"></div>
+			<div id="playerbox"></div>
 		</section>
 	</body>
 </html>
