--- a/Aufgabe2/Aufgabe2.html
+++ b/Aufgabe2/Aufgabe2.html
@@ -5,7 +5,7 @@
 		<title>Aufgabe 2 : Memory</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 		<link type="text/css" rel="stylesheet" href="Aufgabe2.css">
-		<script type="text/javascript" src="Memory.js"></script>
+		<script type="text/javascript" src="Aufgabe2.js"></script>
 		<meta name="viewport" content="width=device=width, initial-scale=1.0">
 	</head>
 	<body>
