--- a/Aufgabe4/Aufgabe4.html
+++ b/Aufgabe4/Aufgabe4.html
@@ -15,7 +15,8 @@
 		<button id="addplayer">Spieler hinzugügen</button>
 		<button id="removeplayer">Spieler entfernen</button>
 		<div id="playernames">
-			<input type="text" placeholder="Spielernamen eingeben" name="player" maxlength="15"/>
+			<input type="text" placeholder="Spielernamen eingeben" name="player"
+				maxlength="15" />
 		</div>
 		<h2>Kartendeck auswählen</h2>
 		<select id="sliderinfo" name="carddeck" onchange="createSlider()">
@@ -26,9 +27,9 @@
 		</select>
 
 		<h2>Kartenanzahl eingeben</h2>
-		
+
 		<div id="sliderbox"></div>
-		
+
 		<button id="start">Los geht's</button>
 	</div>
 
