First Version Aufgabe 6

--- a/Aufgabe6/DatabaseClient.html
+++ b/Aufgabe6/DatabaseClient.html
@@ -8,6 +8,8 @@
 <script src="ProcessForm.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
+	<form action="http://localhost:8200" method="get"></form>
+	
 	<fieldset id="input">
 		<legend> Type student data here </legend>
 		<input type="text" name="name" placeholder="name"/>
