--- a/Aufgabe6/DatabaseClient.html
+++ b/Aufgabe6/DatabaseClient.html
@@ -8,7 +8,7 @@
 <script src="ProcessForm.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-	<form action="http://eia2-node-danielkern.herokuapp.com" method="get"></form>
+	<form action="https://eia2-node-danielkern.herokuapp.com" method="get"></form>
 	<fieldset id="input">
 		<legend> Type student data here </legend>
 		<input type="text" name="name" placeholder="name"/>
