--- a/Aufgabe10/Aufgabe10.html
+++ b/Aufgabe10/Aufgabe10.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Aufgabe 9</title>
+		<title>Aufgabe 10</title>
+		<script src="Classes.js" type="text/javascript" charset="utf-8"></script>
 		<script src="Aufgabe10.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
