--- a/Aufgabe10/Aufgabe10.html
+++ b/Aufgabe10/Aufgabe10.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Aufgabe 10</title>
-		<script src="Classes.js" type="text/javascript" charset="utf-8"></script>
+		<script src="Fish.js" type="text/javascript" charset="utf-8"></script>
+		<script src="Bubble.js" type="text/javascript" charset="utf-8"></script>
 		<script src="Aufgabe10.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
