--- a/Semesteraufgabe/Semesteraufgabe.html
+++ b/Semesteraufgabe/Semesteraufgabe.html
@@ -5,8 +5,12 @@
 		<title>Catch the Drop</title>
 		<script src="MovingObjects.js" type="text/javascript" charset="utf-8"></script>
 		<script src="Smoke.js" type="text/javascript" charset="utf-8"></script>
+		<script src="Rain.js" type="text/javascript" charset="utf-8"></script>
+		<script src="AcidRain.js" type="text/javascript" charset="utf-8"></script>
+		<script src="Bucket.js" type="text/javascript" charset="utf-8"></script>
 		<script src="Cloud.js" type="text/javascript" charset="utf-8"></script>
 		<script src="Meadow.js" type="text/javascript" charset="utf-8"></script>
+		<script src="Flower.js" type="text/javascript" charset="utf-8"></script>
 		<script src="Sky.js" type="text/javascript" charset="utf-8"></script>
 		<script src="Sun.js" type="text/javascript" charset="utf-8"></script>
 		<script src="NuclearPowerStation.js" type="text/javascript" charset="utf-8"></script>
