--- a/Semesteraufgabe/Semesteraufgabe.html
+++ b/Semesteraufgabe/Semesteraufgabe.html
@@ -15,6 +15,7 @@
 		<script src="Sun.js" type="text/javascript" charset="utf-8"></script>
 		<script src="NuclearPowerStation.js" type="text/javascript" charset="utf-8"></script>
 		<script src="main.js" type="text/javascript" charset="utf-8"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<canvas height="600" width="580"></canvas>
