--- a/Semesteraufgabe/Semesteraufgabe.html
+++ b/Semesteraufgabe/Semesteraufgabe.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Catch the Drop</title>
 		<script src="MovingObjects.js" type="text/javascript" charset="utf-8"></script>
-		<script src="AcidRain.js" type="text/javascript" charset="utf-8"></script>
+		<script src="Acidrain.js" type="text/javascript" charset="utf-8"></script>
 		<script src="Rain.js" type="text/javascript" charset="utf-8"></script>
 		<script src="Smoke.js" type="text/javascript" charset="utf-8"></script>
 		<script src="Bucket.js" type="text/javascript" charset="utf-8"></script>
